@startuml InterpreterPattern

skinparam classBackgroundColor   #A8A8A8
skinparam classBorderColor       #444444
skinparam arrowColor             #333366
skinparam classAttributeIconSize 0
skinparam noteBackgroundColor    #C8D0F0
skinparam noteBorderColor        #444444
skinparam defaultFontName        Arial

' ── Context ───────────────────────────────────────────────────────────────────
class Context <<Context>> {
}

' ── AbstractExpression ────────────────────────────────────────────────────────
abstract class Expression <<AbstractExpression>> {
  +{abstract} interpret(context : Context&) : int
}

' ── TerminalExpression ────────────────────────────────────────────────────────
class ValueExpression <<TerminalExpression>> {
  -value : int
  ..
  +interpret(context : Context&) : int
}

' ── NonterminalExpression ─────────────────────────────────────────────────────
class OperationExpression <<NonterminalExpression>> {
  -op       : char
  -operands : vector<Expression*>
  ..
  +addOperand(e : Expression*)
  +interpret(context : Context&) : int
}

' ── Client ────────────────────────────────────────────────────────────────────
class Client <<Client>> {
  +testInterpreter()
  +buildExpression(node : Node*) : Expression*
}

' ── Relationships ─────────────────────────────────────────────────────────────
Expression <|-- ValueExpression
Expression <|-- OperationExpression

OperationExpression o--> "*" Expression

Client --> Expression 
Client --> Context

@enduml
